welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:2: error: value && is not a member of Int
  if (a%3 && a%5) {
          ^fizzBuzz:4: error: type mismatch;
 found   : Int
 required: Boolean
  } else if (a%3) {
              ^fizzBuzz:6: error: type mismatch;
 found   : Int
 required: Boolean
  } else if (a%5) {
              ^