welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.code
def fizzBuzz(a:Int):String = {
  if (a%3 && a%5) {
    return "Fizz Buzz";
  } else if (a%3) {
    return "Fizz";
  } else if (a%5) {
    return "Buzz";
  } else {
    return ""+a
  }
}